--- a/build.yaml
+++ b/build.yaml
@@ -18,10 +18,10 @@
 #
 ---
 include:
- - board: seeeduino_xiao_ble
+ - board: seeeduino_xiao
    shield: roBa_R
    snippet: studio-rpc-usb-uart
- - board: seeeduino_xiao_ble
+ - board: seeeduino_xiao
    shield: roBa_L
- - board: seeeduino_xiao_ble
+ - board: seeeduino_xiao
    shield: settings_reset
